--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,4 +18,5 @@
         <activity android:name=".LoginActivity" />
     </application>
 
+    <uses-sdk android:minSdkVersion="14" />
 </manifest>
